--- a/style.css
+++ b/style.css
@@ -1,9 +1,37 @@
-h1, p {
-    position:relative;
-    right: 300px;
+html, body {
+    background: #fff0f0;
+     
+}
+
+h1 {
+    text-align: center;
 }
 
 button {
-    position:relative;
-    right: 300px;
+    text-align:center;
+}
+
+.introduction {
+    position: relative;
+    top: 50px;
+    margin: 0 auto;
+    padding-left: 3%;
+    padding-right: 3%
+}
+
+.btn {
+    background: #ff8b8b;
+    border: 2px solid black;
+    color: black;
+}
+
+section {
+    background:#ff8b8b;
+    height: 270px;
+    margin: 25px auto;
+}
+
+header{
+    font-size: 40px;
+    padding: 15px;
 }
