--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-    background: #ffdfdf;
+    background: #ffbcbc;
      
 }
 
@@ -12,7 +12,8 @@ button {
 }
 
 section {
-    background:#ff8b8b;
+    background: rgb(162,0,0);
+background: linear-gradient(90deg, rgba(162,0,0,1) 0%, rgba(254,178,178,1) 100%);
     height: 500px;
     margin: 25px auto;
 }
@@ -37,6 +38,7 @@ img {
     height: 200px;
 }
 
+
 .introduction {
     position: relative;
     top: 100px;
@@ -60,3 +62,18 @@ img {
     background-color:#ff8b8b
     
 }
+
+.infographic {
+    height: 1000px;
+    width: 1000px;
+    background-color: #ff8b8b;
+    border: 5px solid black;
+    border-radius: 3%; 
+    font-family: 'Patrick Hand', cursive;
+}
+
+.positive {
+    position: relative;
+    right: 300px;
+}
+
