--- a/style.css
+++ b/style.css
@@ -12,10 +12,11 @@ button {
 }
 
 section {
-    background: rgb(162,0,0);
-background: linear-gradient(90deg, rgba(162,0,0,1) 0%, rgba(254,178,178,1) 100%);
+    background: #ff8b8b;
     height: 500px;
-    margin: 25px auto;
+    width: 1300px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 header{
@@ -25,17 +26,13 @@ header{
 }
 
 h2 {
-    font-weight:bold;
+    padding: 10px;
 }
 
 p {
-    font-size: 25px;
+    font-size: 20px;
     padding-left: 2%;
     padding-right: 2%;
-}
-
-img {
-    height: 200px;
 }
 
 
@@ -62,12 +59,28 @@ img {
 }
 
 .container {
-    text-align:center;
+  width: 700px;
+  display: inline-block;
+
 }
 
 .research {
-    height: 250px;
-    background-color:#ff8b8b
+    height: 1000px;
+    background-color:#ff8b8b;
+    position:relative;
+    top: 100px;
     
 }
 
+.img-fluid {
+    margin: 0px auto;
+    height: 250px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.display{
+    background: #ff6767;
+    height: 250px;
+}
